# epi

./: generate_po.sh  pyproject.toml  setup.py  setup_cli.py  setup_gtk.py
deb-installer/: package-installer.py
deb-installer/services/: deb-installer.desktop
deb-installer/src/: epi-package-installer.py
debian/: changelog  control  copyright  dirs  epi-cli.install  epi-gtk.dirs  epi-gtk.install  epi-gtk.pofiles  epi-gtk.postinst  epi-gtk.prerm  epi-local-installer.install  epi-local-installer.pkexec  epi-local-installer.preinst  epi-local-installer.prerm  install  python3-epi.postinst  rules
epi-cli/: __init__.py  epic
epi-cli.install/: epic
epi-gtk/: epi-gtk
epi-gtk/data_files/: epi-gtk.desktop  epi.xml
epi-gtk/python3-epigtk/: ChooserBox.py  Core.py  DependsBox.py  EpiBox.py  EpiGui.py  EpiGuiManager.py  EulaBox.py  IconProvider.py  IconsManager.py  InfoBox.py  InstallStack.py  LoadingBox.py  MainStack.py  MainWindow.py  PackageStack.py  PackagesModel.py  TerminalBox.py  UninstallStack.py  settings.py
epi-gtk/python3-epigtk/rsrc/: ApplicationOptions.qml  CustomDialog.qml  ErrorPanel.qml  EulaPanel.qml  FilterDelegateModel.qml  InfoPanel.qml  KonsolePanel.qml  ListDelegatePkgItem.qml  Loading.qml  MenuOptionBtn.qml  PackagesInfo.qml  PackagesList.qml  PackagesPanel.qml  epi-gtk.css  epi-gtk.ui  epi-gui.qml
python3-epi/: epimanager.py
snap-installer/src/: epi-snap-installer.py
translations/: ca@valencia.po  ca_ES.UTF-8@valencia.po  ca_ES@valencia.po  epi-gtk.pot  es.po  es_ES.po
translations/epi-gtk/: ca@valencia.po  epi-gtk.pot  es.po  es_ES.po
(+6 files in other folders)
